# redwood

./: .gitignore
Multi_Pen/: BLUE-TEAM-LOG.md  CLAUDE.md  LICENSE  LLM-REPORT.md  PAPER.md  README.md  asr_analysis_utils.py  generate_data.py  main.py  plot.py  pyproject.toml
Multi_Pen/experiments/: EXPERIMENT_GUIDE.md  experiment_plan.md  verify_all_fixes.py  verify_fix2_impact.py
Multi_Pen/figure_generation/: batch7_correlation_analysis.py  create_combined_refusal_plot.py  create_custom_asr_figure_batch7.py  create_stacked_bar_plot.py  publication_quality_plots_by_turns.py  reasoning_token_analysis.py
Multi_Pen/jailbreaks/direct_request/: prompt_multi_turn.py  prompt_single_turn.py
Multi_Pen/test_cases/airbnb_voyeurism/: multi_turn.json  single_turn.json
Multi_Pen/test_cases/asian_insults/: multi_turn.json  single_turn.json
Multi_Pen/test_cases/bestiality/: multi_turn.json  single_turn.json
Multi_Pen/utils/: __init__.py  check_disclaimer.py  check_refusal.py  evaluate_with_rubric.py  evaluate_with_strongreject.py  generate.py  generate_score_rubric.py  reasoning_utils.py  run.py
negative_mute/: BLUE-TEAM-LOG.md  CLAUDE.md  LLM-REPORT.md  PAPER.md  README.md  ablation.py  examples.py  experiment_log.py  experiment_results.jsonl  generate_figures.py  guide.md  pyproject.toml  qk_circuit_analysis.py  replicate_figures.py  run_experiments.py  utils.py
negative_mute/research_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
negative_mute/test/: example.txt  modal.txt  modal_changed.txt
preference_lion/: BLUE-TEAM-LOG.md  PAPER.md  (+3 more)
(+627 files in other folders)
