[project]
name = "research_project"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = [
    "openai>=1.59.7",
    "python-dotenv>=1.0.1",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
]
